# supercede-auth

./: cabal.project  supercede-auth.cabal
src/: Main.hs
src/Supercede/: Auth.hs
src/Supercede/Auth/: Data.hs
